--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portofolio - [Nama Anda]</title>
+    <title>Portofolio - Miftahul Arif</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
@@ -607,7 +607,7 @@
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">Tentang Saya</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#portfolio">Portofolio</a></li>
                     <li><a href="#contact">Kontak</a></li>
                 </ul>
             </nav>
@@ -618,7 +618,7 @@
     <section id="home" class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1>Hai, Saya <span>[Nama Anda]</span></h1>
+                <h1>Hai, Saya <span>Miftahul Arif</span></h1>
                 <p>Seorang desainer grafis dan pengembang web dengan passion menciptakan pengalaman visual yang menarik dan fungsional. Saya berspesialisasi dalam desain UI/UX, branding, dan pengembangan front-end.</p>
                 <div class="hero-btns">
                     <a href="#portfolio" class="btn">Lihat Karya</a>
